src/test/ui/annotate-snippet/missing-type.stderr
error[E0412]: cannot find type `Iter` in this scope
 --> $DIR/missing-type.rs:4:11
  |
4 |     let x: Iter;
  |            ^^^^ not found in this scope
  |
